@@ -15,11 +15,11 @@
 package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.List;
-import java.util.Map;
 import java.util.stream.Stream;
 
 /** These test for variations other idms SECTION definitions */
@@ -65,6 +65,6 @@ class TestIdmsSections {
   @ParameterizedTest
   @MethodSource("textsToTest")
   void test(String text) {
-    UseCaseEngine.runTest(text, List.of(), Map.of());
+    UseCaseEngine.runTest(text, ImmutableList.of(), ImmutableMap.of());
   }
 }
