@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks the positive scenario with building an extended document with correct positions
@@ -91,13 +90,13 @@ class TestMappingWithMultiDefinitions {
   void test() {
     UseCaseEngine.runTest(
         DOCUMENT,
-        List.of(
+        ImmutableList.of(
             new CobolText(STRUC_NAME, STRUC),
             new CobolText(WITHNEST_NAME, WITHNEST),
             new CobolText(NESTED_NAME, NESTED),
             new CobolText(NESTED1_NAME, NESTED1),
             new CobolText(NESTED2_NAME, NESTED2),
             new CobolText(PARS_NAME, PARS)),
-        Map.of());
+        ImmutableMap.of());
   }
 }
