@@ -15,10 +15,9 @@
 package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /** This use cases checks if "PERFORM" with the "UNTIL" sentence processed correctly. */
 class TestPerformUntilCorrect {
@@ -39,6 +38,6 @@ class TestPerformUntilCorrect {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(), Map.of(), List.of("ID1"));
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(), ImmutableMap.of(), ImmutableList.of("ID1"));
   }
 }
