@@ -17,12 +17,11 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels.ERROR;
 
@@ -48,8 +47,8 @@ class TestSemanticErrorsFromCopybooksShownInDocument {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(MOVE_NAME, MOVE)),
-        Map.of(
+        ImmutableList.of(new CobolText(MOVE_NAME, MOVE)),
+        ImmutableMap.of(
             "1",
             new Diagnostic(
                 null, "Invalid definition for: SMTH", DiagnosticSeverity.Error, ERROR.getText())));
