@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /** This test checks if sql include statement works correctly. */
 class TestSqlIncludeStatement {
@@ -40,6 +39,6 @@ class TestSqlIncludeStatement {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(CPY_NAME, STRUCT)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(CPY_NAME, STRUCT)), ImmutableMap.of());
   }
 }
